# ma_slam_III_a

./: .project  CMakeLists.txt  README.md  package.xml  seeMakeLists.txt
launch/: ma_slam.launch
results/matchingImgs/: Matching_b4_optimization.txt  Matching_info.txt  Optimization.g2o  poses_optimized.txt  poses_original.txt  ptClToPtrSource.ply  ptClToPtrTarget.ply
results/testImgs/: robot1MatchMatrixFileEnd.yml
src/: .cproject  CentralStorage.cpp  CentralStorage.h  HelperFcts.cpp  HelperFcts.h  KeyFrameListenerTraining.cpp  PoseGraph.cpp  PoseGraph.h  README.md  SyncListener.cpp  SyncListener.h  ma_slam(backup).cpp  ma_slam.cpp  ma_slam_training.cpp
src/3dcov/: .desktop  cbshot.cpp  cbshot.h  d.h
src/ceres/: read_g2o.h
src/latex/: CentralStorage_8cpp.tex  CentralStorage_8cpp__incl.md5  CentralStorage_8h.tex  CentralStorage_8h__dep__incl.md5  CentralStorage_8h__incl.md5  HelperFcts_8cpp.tex  HelperFcts_8cpp__incl.md5  HelperFcts_8h.tex  HelperFcts_8h__dep__incl.md5  HelperFcts_8h__incl.md5  KalmanFilterScale_8cpp.tex  KalmanFilterScale_8cpp__incl.md5  KalmanFilterScale_8h.tex  KalmanFilterScale_8h__dep__incl.md5  KalmanFilterScale_8h__incl.md5  KeyFrameListenerTraining_8cpp.tex  KeyFrameListenerTraining_8cpp__incl.md5  KeyFrameListenerTraining_8h.tex  KeyFrameListenerTraining_8h__dep__incl.md5  KeyFrameListenerTraining_8h__incl.md5  PoseGraph_8cpp.tex  PoseGraph_8cpp__incl.md5  PoseGraph_8h.tex  PoseGraph_8h__dep__incl.md5  PoseGraph_8h__incl.md5  SyncListener_8cpp.tex  SyncListener_8cpp__incl.md5  SyncListener_8h.tex  SyncListener_8h__dep__incl.md5  SyncListener_8h__incl.md5  annotated.tex  cc__fabmap__node_8cpp.tex  cc__fabmap__node_8cpp__incl.md5  classCentralStorage.tex  classCentralStorage__coll__graph.md5  classEdge.tex  classEdge__coll__graph.md5  classHelperFcts.tex  classKalmanFilterScale.tex  classKeyFrameListenerTraining.tex  (+13 more)
src/unused/: fabmap.cpp
